# mcp-obsidian-server

./: .gitignore  README.md  obsidian.bat  pyproject.toml  test_async_block.py  test_connection.py  test_put_content.py
src/mcp_obsidian/: obsidian.py  server.py  tools.py
